--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@
                             }
                         }
                     } catch (error) {
-                        console(error);
+                        console.error(error);
                         alert('Error al enviar los checkboxes');
                     }
 
@@ -1629,7 +1629,7 @@
 
                         alert('Colaboraciones enviadas correctamente');
                     } catch (error) {
-                        console(error);
+                        console.error(error);
                         alert('Error al enviar las colaboraciones');
                     }
 
@@ -1637,7 +1637,7 @@
                     e.target.reset();  // Limpia el formulario
 
                 } catch (error) {
-                    // console.error('Error al insertar datos:', error);
+                    console.error('Error al insertar datos:', error);
                     alert('Error al enviar el formulario');
                 }
             }
