--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <h3>IDENTIFICACIÓN Y UBICACIÓN DE LA EMPRESA</h3>
 
             <label for="razon-social">Nombre o Razón Social:</label>
-            <input type="text" id="razon-social" name="razon-social"><br>
+            <input type="text" id="razon-social" name="razon-social" required><br>
 
             <label for="ruc">RUC:</label>
-            <input type="text" id="ruc" name="ruc"><br>
+            <input type="text" id="ruc" name="ruc" required><br>
 
             <label for="direccion">Dirección Domicilio:</label>
             <input type="text" id="direccion" name="direccion"><br>
@@ -69,10 +69,10 @@
             <input type="tel" id="telefono" name="telefono"><br>
 
             <label for="email">e-mail:</label>
-            <input type="email" id="email" name="email"><br>
+            <input type="text" id="email" name="email"><br>
 
             <label for="sitio-web">Sitio Web:</label>
-            <input type="url" id="sitio-web" name="sitio-web"><br>
+            <input type="text" id="sitio-web" name="sitio-web"><br>
 
             <h3>DATOS CARACTERÍSTICOS DE LA EMPRESA</h3>
 
@@ -1699,6 +1699,7 @@
                     }
 
                     alert('Formulario enviado correctamente');
+                    descargarFormularioHTML();
                     e.target.reset();  // Limpia el formulario
 
                 } catch (error) {
