--- a/index.html
+++ b/index.html
@@ -857,13 +857,13 @@
                     <th>Públicas</th>
                 </tr>
                 <tr>
-                    <td colspan="3"><textarea name="universidades" rows="4"></textarea></td>
+                    <td colspan="3"><textarea name="relacion-inovacion-universidades" rows="4"></textarea></td>
                 </tr>
                 <tr>
                     <th colspan="3">Gobierno</th>
                 </tr>
                 <tr>
-                    <td colspan="3"><textarea name="gobierno" rows="4"></textarea></td>
+                    <td colspan="3"><textarea name="relacion-inovacion-gobierno" rows="4"></textarea></td>
                 </tr>
             </table>
 
@@ -1800,6 +1800,43 @@
                     }
                 });
 
+
+                document.querySelectorAll('input[type="text"]').forEach((input) => {
+                    const name = input.name;
+
+                    // Verifica si el campo pertenece a un grupo relacionado con checkboxes/radio y no está vacío
+                    if (validaNombreEtiqueta(name) && input.value.trim() !== '') {
+                        respuestasCheckboxes.push({
+                            pregunta: name,
+                            opcion: input.value.trim()  // Agrega el valor del campo de texto
+                        });
+                    }
+                });
+
+                document.querySelectorAll('input[type="number"]').forEach((input) => {
+                    const name = input.name;
+
+                    // Verifica si el campo pertenece a un grupo relacionado con checkboxes/radio y no está vacío
+                    if (validaNombreEtiqueta(name) && input.value.trim() !== '') {
+                        respuestasCheckboxes.push({
+                            pregunta: name,
+                            opcion: input.value.trim()  // Agrega el valor del campo de texto
+                        });
+                    }
+                });
+
+                document.querySelectorAll('textarea').forEach((input) => {
+                    const name = input.name;
+
+                    // Verifica si el campo pertenece a un grupo relacionado con checkboxes/radio y no está vacío
+                    if (input.value.trim() !== '') {
+                        respuestasCheckboxes.push({
+                            pregunta: name,
+                            opcion: input.value.trim()  // Agrega el valor del campo de texto
+                        });
+                    }
+                });
+
                 // Array para almacenar colaboraciones
                 const colaboraciones = [];
 
@@ -1839,6 +1876,19 @@
                     case '2': return 'Ocasionalmente (algunas veces al año)';
                     case '3': return 'Frecuentemente (al menos una vez entre 1 a 3 meses)';
                     default: return 'Desconocido';  // Por si hay un valor inesperado
+                }
+            }
+
+            function validaNombreEtiqueta(valor){
+                if(valor.includes('Producto')|| valor.includes('codigo-cpc') || valor.includes('ventas-202')
+                || valor.includes('ventas-202')|| valor.includes('exportaciones-202')|| valor.includes('inversiones-20')
+                || valor.includes('clientes-ex-202')|| valor.includes('instituciones-sin-convenio')|| valor.includes('instituciones-con-convenio')
+                || valor.includes('empleo-202')|| valor.includes('empleados-innov-202')|| valor.includes('clientes-ec-202')
+            ){
+                    return true;
+                }
+                else {
+                    return false;
                 }
             }
         </script>
