--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@
             }
 
             function validaNombreEtiqueta(valor){
-                if(valor.includes('Producto')|| valor.includes('codigo-cpc') || valor.includes('ventas-202')
+                if(valor.includes('producto')|| valor.includes('codigo-cpc') || valor.includes('ventas-202')
                 || valor.includes('ventas-202')|| valor.includes('exportaciones-202')|| valor.includes('inversiones-20')
                 || valor.includes('colaborador1') || valor.includes('colaborador2') || valor.includes('colaborador3') || valor.includes('colaborador4')
                 || valor.includes('clientes-ex-202')|| valor.includes('instituciones-sin-convenio')|| valor.includes('instituciones-con-convenio')
